@@ -1,5 +1,7 @@
 2009-08-17  higepon  <higepon@users.sourceforge.jp>
 
+	* PortProcedures.cpp (getStringNEx): Fixed Issue 92.
+
 	* lib/memcached.ss (memcached-delete!): Added.
 
 	* UtilityProcedures.cpp (number->string): Fixed Issue 90.
